--- a/css/login.css
+++ b/css/login.css
@@ -34,7 +34,7 @@ h2 {
     border-bottom: var(--maincolor) 1px solid;
 }
 span {
-    margin-top: 10%;
+    margin-top: 5%;
     color: var(--textcolor);
     text-transform: uppercase;
 }
@@ -42,8 +42,9 @@ input {
     margin-top: 5%;
     background-color: var(--background);
     border: var(--maincolor) 1px solid;
-    border-radius: 10px;
+    border-radius: 20px;
     color: var(--textcolor);
+    height: 20px; 
 }
 a {
     color: #978897;
@@ -54,6 +55,13 @@ a {
     left: 5px;
 }
 input[type="button"]{
+    display: none;
+}
+label{
     margin-top: 7%;
-    color: var(--textcolor);
+    color: #26547c;
+    font-size: 30px;
+    border: #26547c 1px solid;
+    border-radius: 50%;
+    padding: 0px 6px 2px 6px
 }
