--- a/css/main.css
+++ b/css/main.css
@@ -148,12 +148,13 @@ body {
 }
 #disconnect{
     text-transform: uppercase;
-    padding: 5px 10px;
+    padding: 2px 6px;
     border: var(--maincolor) solid 1px;
     border-radius: 10px;
     color: #ec4e20;
     cursor: pointer;
-    margin-right: 20px; 
+    margin-right: 30px; 
+    font-size: 25px;
 }
 #disconnect:hover{
     background-color: #ec502023
