--- a/css/login.css
+++ b/css/login.css
@@ -8,9 +8,9 @@ body {
     background-color: var(--background);
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
         Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    --background: #f5f5f5;
-    --maincolor: #c0d6df;
-    --textcolor: #0d0221;
+        --background: #f5f5f5;
+        --maincolor: #fcd2d6 ;
+        --textcolor: #b11724;
     }
 #main {
     position: relative;
@@ -59,9 +59,9 @@ input[type="button"]{
 }
 label{
     margin-top: 7%;
-    color: #26547c;
+    color: #f45b69;
     font-size: 30px;
-    border: #26547c 1px solid;
+    border: var(--maincolor) 1px solid;
     border-radius: 50%;
     padding: 0px 6px 2px 6px
 }
