--- a/css/main.css
+++ b/css/main.css
@@ -4,9 +4,8 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: var(--background);
     --background: #f5f5f5;
-    --maincolor: #c0d6df;
+    --maincolor: #fcd2d6 ;
     --textcolor: #0d0221;
-
 }
 #userPart {
     background-color: var(--background);
@@ -74,13 +73,13 @@ body {
     align-items: center;
     margin: 10px 5px;
     color: var(--textcolor);
-
 }
+
 #user svg{
     margin-left: 7px; 
-    color: #8bd67c
+    color: #77bd31
 }
-.all_user{
+.all_user{ 
     margin: 6px 0;
     margin-left: 7px;
     display: inline-block;
@@ -99,12 +98,12 @@ body {
     border-radius: 20px
 }
 #message svg{
-    color: #26547c;
+    color: #f45b69;
     transition: 0.1s;
     cursor: pointer;
 }
 #message svg:hover{
-    color: #2367a1;
+    color: #ffaab3;
 }
 .msg{
     margin: 0 0 10px 20px;
@@ -129,17 +128,16 @@ body {
 .msg p{
     max-width: 600px;
     margin: 0;
-    background-color: var(--background);
+    background-color: #f6e8ea;
     padding: 5px 20px;
     color: var(--textcolor);
     font-size: 15px;
-    border: #666975 solid 1px;
     border-radius: 20px;
     width: max-content;
     
 }
 .personnal p{
-    background-color: #cef0ff;
+    background-color: var(--maincolor);
     margin-left: 80vw;
 }
 .personnal span{
@@ -152,7 +150,7 @@ body {
     padding: 2px 6px;
     border: var(--maincolor) solid 1px;
     border-radius: 10px;
-    color: #ec4e20;
+    color: #f45b69;
     cursor: pointer;
     margin-right: 30px; 
     font-size: 25px;
@@ -206,6 +204,11 @@ body {
 #disconnect_menu div span:hover{
     background-color: #c0d6df3f ;
 }
+
+#jebite{
+    position: absolute;
+}
+
 
 @media (max-width: 992px) { 
     #userPart{
